--- a/weixinsite/m-fcode.html
+++ b/weixinsite/m-fcode.html
@@ -11,10 +11,15 @@
 </head>
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
     <h3 class=" head-title-appearance">优惠码校验</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
 
@@ -39,11 +44,11 @@
         <div class="clear"></div>
     </div>
 
-    <div class="m-button" style="width: 100%; margin-top: 1rem;">
-        <div class="m-button-content">
+    <a class="m-button" style="width: 100%; margin-top: 1rem;" href="#">
+        <span class="m-button-content">
             确认完成
-        </div>
-    </div>
+        </span>
+    </a>
 </div>
 <!--
 <div class="footer">
