--- a/weixinsite/m-get-invoice.html
+++ b/weixinsite/m-get-invoice.html
@@ -11,10 +11,15 @@
 </head>
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
     <h3 class=" head-title-appearance">索取发票</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
 
@@ -32,23 +37,13 @@
             </li>
         </ul>
     </div>
-    <div class="m-button mt3" style="width: 100%">
-        <div class="m-button-content">
+    <a class="m-button mt3" href="#" style="width: 100%">
+        <span class="m-button-content">
            确认完成
-        </div>
-    </div>
+        </span>
+    </a>
 </div>
 
 
-<div class="footer">
-    <div>
-        <span>
-            登录
-        </span>
-        <span>
-            注册
-        </span>
-    </div>
-</div>
 </body>
 </html>
