--- a/weixinsite/m-index.html
+++ b/weixinsite/m-index.html
@@ -17,7 +17,7 @@
 <!--head-->
 <nav>
     <a href="m-index.html">
-        <div class="icon-home-appearance icon-active" >
+        <div class="icon-home-appearance icon-active" style="color: #fff; width: 10rem!important;">
             国馆商城
         </div>
     </a>
