--- a/weixinsite/m-news.html
+++ b/weixinsite/m-news.html
@@ -17,18 +17,13 @@
 <!--head-->
 <nav>
     <a href="m-index.html">
-        <div class="icon-home-appearance icon-active" >
-            国馆商城
+        <div class="icon-home icon-home-appearance icon-active" >
         </div>
     </a>
     <h3 class=" head-title-appearance">国馆新闻</h3>
     <a href="m-shoppingCart.html">
-        <div class=" icon-shopping-cart icon-user-appearance icon-active">
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
             <span class="cart-number">3</span>
-        </div>
-    </a>
-    <a href="m-center.html">
-        <div class="icon-user icon-shopping-cart-appearance icon-active">
         </div>
     </a>
 </nav>
@@ -173,31 +168,6 @@
     </div>
 </div>
 
-<!--footer-->
-<div class="footer">
-<!--    <div class="mb1">
-        <span class="selected">
-            触屏版
-        </span>
-        <span>
-            电脑版
-        </span>
-    </div>-->
-    <ul class="footer-content">
-        <li>
-            <a tel="4009005000">
-                <i class="icon-phone"></i>
-                400-900-5000
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                    <img src="img/wx_black.png" alt="" style="width: 1.6rem; height: 1.6rem; vertical-align: middle"/>
-                关注“国馆酒”
-            </a>
-        </li>
-    </ul>
-</div>
 </body>
 <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
 <script src="js/idangerous.swiper-1.9.1.min.js" type="text/javascript"></script>
