--- a/weixinsite/m-online-pay.html
+++ b/weixinsite/m-online-pay.html
@@ -11,14 +11,19 @@
 </head>
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
     <h3 class=" head-title-appearance">购买成功</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
 
-<div class="content m-order-detail-content m-online-detail-content">
+<div class=" m-order-detail-content m-online-detail-content">
     <div class="m-order-detail-partTwo mt0" style="padding-top: 0.8rem;">
         <div class="ml1">
             <div><span class="order-title-label">订购时间</span><span>2014-04-27</span></div>
@@ -52,20 +57,6 @@
             </div>
         </div>
         <div class="clear"></div>
-    </div>
-</div>
-
-
-
-
-<div class="footer">
-    <div>
-        <span>
-            登录
-        </span>
-        <span>
-            注册
-        </span>
     </div>
 </div>
 
