--- a/weixinsite/m-order-search.html
+++ b/weixinsite/m-order-search.html
@@ -13,16 +13,23 @@
 
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
     <h3 class=" head-title-appearance">我的订单</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
-<div class="content">
-    <!--未生成订单-->
+
+
+<div class="order-content">
+    <!--没有订单时显示-->
     <ul>
-        <li class="content m-order-detail-content m-online-detail-content-new">
+        <li class="m-order-detail-content m-online-detail-content-new">
             <div class="no-order-list">
                 <div class="order-title-label" style="width:auto;">
                     你还没生成任何订单哦，支付成功后，订单及物流信息将出现在这里。
@@ -34,9 +41,9 @@
         </li>
     </ul>
 
-    <!--已生成订单-->
+    <!--已生成订单，有订单时显示-->
     <ul>
-        <li class="content m-order-detail-content m-online-detail-content-new">
+        <li class="m-order-detail-content m-online-detail-content-new">
             <div class="m-order-detail-partTwo " style="padding-top: 0.8rem;">
                 <div class="ml1">
                     <div><span class="order-title-label">订购时间</span><span>2014-04-27</span></div>
@@ -50,7 +57,7 @@
             </div>
             <div class="m-order-detail-partTwo m-order-zhedie" style="border-bottom: none">
                 <div class="ml1">
-                    <div><span class="order-title-label">已受理</span> <span class="color-f66900 fr mr1"><span class="text-plus">+</span><span class="text-minus" style="display: none">-</span> 展开</span></div>
+                    <div><span class="order-title-label">已受理</span> <span class="color-f66900 fr mr1">展开<span class="text-plus icon-caret-up" style="margin-left: 0.3rem"></span><span class="text-minus icon-caret-down" style="display: none;margin-left: 0.3rem"></span></span></div>
                 </div>
             </div>
             <div class="m-order-detail-partTwo mt0" style="display: none; border-bottom: none">
@@ -64,7 +71,7 @@
             </div>
         </li>
 
-        <li class="content m-order-detail-content m-online-detail-content-new">
+        <li class="m-order-detail-content m-online-detail-content-new">
             <div class="m-order-detail-partTwo " style="padding-top: 0.8rem;">
                 <div class="ml1">
                     <div><span class="order-title-label">订购时间</span><span>2014-04-27</span></div>
@@ -78,7 +85,7 @@
             </div>
             <div class="m-order-detail-partTwo m-order-zhedie" style="border-bottom: none">
                 <div class="ml1">
-                    <div><span class="order-title-label">已受理</span><span class="color-f66900 fr mr1"><span class="text-plus">+</span><span class="text-minus" style="display: none">-</span> 展开</span></div>
+                    <div><span class="order-title-label">已受理</span> <span class="color-f66900 fr mr1">展开<span class="text-plus icon-caret-up" style="margin-left: 0.3rem"></span><span class="text-minus icon-caret-down" style="display: none;margin-left: 0.3rem"></span></span></div>
                 </div>
             </div>
             <div class="m-order-detail-partTwo mt0" style="display: none;border-bottom: none">
@@ -94,16 +101,6 @@
     </ul>
 </div>
 
-<div class="footer">
-    <div>
-        <span>
-            登录
-        </span>
-        <span>
-            注册
-        </span>
-    </div>
-</div>
 </body>
 <script type="text/javascript">
     $(function(){
