--- a/weixinsite/m-order-submit.html
+++ b/weixinsite/m-order-submit.html
@@ -11,10 +11,15 @@
 </head>
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
     <h3 class=" head-title-appearance">提交订单</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
 
@@ -80,12 +85,10 @@
     <div class="m-check-total-money">
         应付总额<span>￥5332</span>
     </div>
-    <a href="m-online-pay.html">
-        <div class="m-button m-button-check">
-            <div class="m-button-content">
-                提交订单
-            </div>
-        </div>
+    <a href="m-online-pay.html" class="m-button m-button-check">
+        <span class="m-button-content">
+            提交订单
+        </span>
     </a>
 </div>
 </body>
