--- a/weixinsite/m-center.html
+++ b/weixinsite/m-center.html
@@ -11,55 +11,48 @@
 </head>
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
     <h3 class=" head-title-appearance">个人中心</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
 
-<div class="m-center-banner">
+<!--<div class="m-center-banner">
     <div class="m-center-login-button">立即登录</div>
+</div>-->
+
+<div class="m-center-partOne">
+    <ul>
+
+        <a href="m-order-search.html">
+            <li>
+                <div class="icon-file-alt"></div>
+                <div class="inlinebl">订单管理</div>
+                <div class="icon-angle-right"></div>
+            </li>
+        </a>
+        <a href="#">
+            <li>
+                <div class="icon-truck"></div>
+                <div class="inlinebl">物流查询</div>
+                <div class="icon-angle-right"></div>
+            </li>
+        </a>
+        <a href="m-address-admin.html">
+            <li>
+                <div class="icon-reorder"></div>
+                <div class="inlinebl">地址管理</div>
+                <div class="icon-angle-right"></div>
+            </li>
+        </a>
+    </ul>
 </div>
 
-<div class="content">
-    <div class="m-center-partOne">
-        <ul>
-
-            <a href="m-order-search.html">
-                <li>
-                    <div class="icon-file-alt"></div>
-                    <div class="inlinebl">订单管理</div>
-                    <div class="icon-angle-right"></div>
-                </li>
-            </a>
-            <a href="#">
-                <li>
-                    <div class="icon-truck"></div>
-                    <div class="inlinebl">物流查询</div>
-                    <div class="icon-angle-right"></div>
-                </li>
-            </a>
-            <a href="m-address-admin.html">
-                <li>
-                    <div class="icon-reorder"></div>
-                    <div class="inlinebl">地址管理</div>
-                    <div class="icon-angle-right"></div>
-                </li>
-            </a>
-        </ul>
-    </div>
-</div>
-
-<div class="footer">
-    <div>
-        <span>
-            登录
-        </span>
-        <span>
-            注册
-        </span>
-    </div>
-</div>
 </body>
 </html>
