--- a/weixinsite/m-checkout-choose.html
+++ b/weixinsite/m-checkout-choose.html
@@ -11,10 +11,15 @@
 </head>
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">结算</h3>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
+        <h3 class=" head-title-appearan">结算</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
 
@@ -77,25 +82,13 @@
     </div>
 
 
-    <a href="m-order-submit.html">
-        <div class="m-button mt3" style="width: 100%">
-            <div class="m-button-content">
+        <a  href="m-order-submit.html" class="m-button mt3" style="width: 100%">
+            <span class="m-button-content">
                 下一步
-            </div>
-        </div>
-    </a>
+            </span>
+        </a>
 
 </div>
 
-<div class="footer">
-    <div>
-        <span>
-            登录
-        </span>
-        <span>
-            注册
-        </span>
-    </div>
-</div>
 </body>
 </html>
