--- a/weixinsite/m-order-detail.html
+++ b/weixinsite/m-order-detail.html
@@ -11,10 +11,15 @@
 </head>
 <body>
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home icon-home-appearance icon-active" >
+        </div>
+    </a>
     <h3 class=" head-title-appearance">订单详情</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
     </a>
 </nav>
 
