--- a/weixinsite/m-shoppingCart-empty.html
+++ b/weixinsite/m-shoppingCart-empty.html
@@ -15,18 +15,13 @@
 <!--head-->
 <nav>
     <a href="m-index.html">
-        <div class="icon-home-appearance icon-active" >
-            国馆商城
+        <div class="icon-home icon-home-appearance icon-active" >
         </div>
     </a>
     <h3 class=" head-title-appearance">购物车</h3>
     <a href="m-shoppingCart.html">
-        <div class=" icon-shopping-cart icon-user-appearance icon-active">
+        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active">
             <span class="cart-number">3</span>
-        </div>
-    </a>
-    <a href="m-center.html">
-        <div class="icon-user icon-shopping-cart-appearance icon-active">
         </div>
     </a>
 </nav>
@@ -39,11 +34,11 @@
         <img src="img/cart.png">
     </div>
 
-    <div class="m-button mt3" style="width: 100%">
-        <div class="m-button-content">
+    <a class="m-button mt3" href="m-index.html" style="width: 100%">
+        <span class="m-button-content">
             去首页逛逛
-        </div>
-    </div>
+        </span>
+    </a>
 </div>
 </body>
 </html>
