--- a/weixinsite/m-product.html
+++ b/weixinsite/m-product.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="right-bottom">
-                <a href="#" class="m-button">
+                <a href="m-product-detail.html" class="m-button">
                     <span class="m-button-content">
                         了解详情
                     </span>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="right-bottom">
-                <a href="#" class="m-button">
+                <a href="m-product-detail.html" class="m-button">
                     <span class="m-button-content">
                         了解详情
                     </span>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="right-bottom">
-                <a href="#" class="m-button">
+                <a href="m-product-detail.html" class="m-button">
                     <span class="m-button-content">
                         了解详情
                     </span>
