--- a/weixinsite/m-index.html
+++ b/weixinsite/m-index.html
@@ -50,7 +50,7 @@
 </div>
 <ul class="navgation">
     <li>
-        <a href="#">
+        <a href="m-product.html">
             国馆酒
         </a>
     </li>
