--- a/weixinsite/m-product-detail.html
+++ b/weixinsite/m-product-detail.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="css/idangerous.swiper.css">
 </head>
 <body>
+<!--微信遮罩层-->
+<div class="share-cover">
+    <div class="share-guide" id="weixin-guide" ng-click="closeCover()"></div>
+    <div class="share-guide" id="mobile-guide"></div>
+</div>
+
 <!--head-->
 <nav>
     <a href="m-index.html">
@@ -30,7 +36,7 @@
 
 <!--content-->
 <div class="product">
-<!--tab切换页-->
+    <!--tab切换页-->
     <div id="tab-container" class='tab-container' style="border-top: 0.1rem solid #ebebeb">
         <ul class='etabs'>
             <li class='tab'><a href="#tabs1-one">概述</a></li>
@@ -246,16 +252,56 @@
             </div>
         </div>
     </div>
+
+    <div class="share-button">
+        <div class="title">
+           发送给朋友
+        </div>
+        <div class="button">
+            <a href="javascript:void(0);" class="m-button-empty product-button share-to-sina-button">
+                <span class="m-button-content">复制链接</span>
+            </a>
+            <a href="javascript:void(0);" class="m-button-empty product-button share-to-sina-button">
+                <span class="m-button-content">微信分享</span>
+            </a>
+            <a href="sms:13764567708" class="m-button-empty product-button">
+                <span class="m-button-content">短信</span>
+            </a>
+            <a href="#" class="m-button-empty product-button">
+                <span class="m-button-content">微博</span>
+            </a>
+            <a href="#" class="m-button-empty product-button">
+                <span class="m-button-content">PDF版</span>
+            </a>
+        </div>
+        <div class="show-price">
+            <label>
+                <input type="checkbox"/>
+                让朋友看到价格
+            </label>
+        </div>
+    </div>
+    <div class="purchase-button">
+        <a href="m-product.html" class="icon-angle-left link"></a>
+        <a class="m-button " href="tel:4009005000" style="width: 40%">
+            <span class="m-button-content">
+                热线：400-900-5000
+            </span>
+        </a>
+        <a class="m-button " href="#" style="width: 40%">
+            <span class="m-button-content">
+                立即购买
+            </span>
+        </a>
+    </div>
 </div>
 
 </body>
 <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-<script src="js/idangerous.swiper-1.9.1.min.js" type="text/javascript"></script>
-<script src="js/idangerous.swiper.scrollbar-1.2.js" type="text/javascript"></script>
-<script src="js/swiper-demos.js" type="text/javascript"></script>
 <script src="js/jquery.lazyload.js" type="text/javascript"></script>
 <script src="js/jquery.hashchange.min.js" type="text/javascript"></script>
 <script src="js/jquery.easytabs.min.js" type="text/javascript"></script>
+<script src="js/option.js" type="text/javascript"></script>
 
 <script type="text/javascript">
     $(function(){
@@ -269,5 +315,6 @@
             scrollTo(0,0);
         })
     });
+
 </script>
 </html>
