--- a/weixinsite/m-address-admin.html
+++ b/weixinsite/m-address-admin.html
@@ -107,7 +107,7 @@
 </div>
 
 </body>
-<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="lib/jquery-1.7.1.min.js" type="text/javascript"></script>
 <script>
     $(document).ready(function(){
         $(".m-choose-product li div.m-address-left").on("click",function(){
