--- a/weixinsite/test2.html
+++ b/weixinsite/test2.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
+
+    <script src="lib/sea.js" type="text/javascript" charset="utf-8" data-main="./seaModel/main"></script>
+    <script src="lib/jquery-1.8.0.js" type="text/javascript"></script>
 </head>
 <body>
 <nav>
@@ -39,7 +42,6 @@
     </div>
 </div>
 </body>
-<script src="lib/jquery-1.8.0.js"></script>
 <script>
     $(".show-first").click(function(){
         $(this).css("left","-20rem");
