--- a/weixinsite/m-news.html
+++ b/weixinsite/m-news.html
@@ -169,8 +169,8 @@
 </div>
 
 </body>
-<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-<script src="js/idangerous.swiper-1.9.1.min.js" type="text/javascript"></script>
-<script src="js/idangerous.swiper.scrollbar-1.2.js" type="text/javascript"></script>
-<script src="js/swiper-demos.js" type="text/javascript"></script>
+<script src="lib/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="lib/idangerous.swiper-1.9.1.min.js" type="text/javascript"></script>
+<script src="lib/idangerous.swiper.scrollbar-1.2.js" type="text/javascript"></script>
+<script src="lib/swiper-demos.js" type="text/javascript"></script>
 </html>
