--- a/weixinsite/m-order-search.html
+++ b/weixinsite/m-order-search.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
     <link rel="stylesheet" href="css/m-cart.css">
-    <script type="text/javascript" src="js/jquery-1.8.0.js"></script>
+    <script type="text/javascript" src="lib/jquery-1.8.0.js"></script>
 </head>
 
 <body>
