--- a/weixinsite/m-product-detail.html
+++ b/weixinsite/m-product-detail.html
@@ -297,11 +297,11 @@
 </div>
 
 </body>
-<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-<script src="js/jquery.lazyload.js" type="text/javascript"></script>
-<script src="js/jquery.hashchange.min.js" type="text/javascript"></script>
-<script src="js/jquery.easytabs.min.js" type="text/javascript"></script>
-<script src="js/option.js" type="text/javascript"></script>
+<script src="lib/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="lib/jquery.lazyload.js" type="text/javascript"></script>
+<script src="lib/jquery.hashchange.min.js" type="text/javascript"></script>
+<script src="lib/jquery.easytabs.min.js" type="text/javascript"></script>
+<script src="lib/option.js" type="text/javascript"></script>
 
 <script type="text/javascript">
     $(function(){
