--- a/weixinsite/m-shoppingCart.html
+++ b/weixinsite/m-shoppingCart.html
@@ -209,7 +209,7 @@
 </fieldset>-->
 
 </body>
-<script type="text/javascript" src="js/jquery-1.8.0.js"></script>
+<script type="text/javascript" src="lib/jquery-1.8.0.js"></script>
 
 <script type="text/javascript">
     $(function(){
