--- a/weixinsite/m-address-modify.html
+++ b/weixinsite/m-address-modify.html
@@ -39,7 +39,7 @@
 
     <div class="m-underline-ebebeb input-area">
         <div class="m-modify-name">
-            手机:
+            手机号码:
         </div>
         <div class="m-modify-input">
             <div class="m-modify-input-wrap">
