--- a/weixinsite/m-news.html
+++ b/weixinsite/m-news.html
@@ -79,7 +79,9 @@
     <ul class="news-lists">
         <li>
            <div class="news-block">
-               <img src="image/11_01.jpg" alt=""/>
+               <a href="m-news-detail.html">
+                   <img src="image/11_01.jpg" alt=""/>
+               </a>
                <div class="title">
                    国馆酒亮相国际名酒展，成外商眼中“香饽
                </div>
