--- a/weixinsite/m-news-detail.html
+++ b/weixinsite/m-news-detail.html
@@ -16,8 +16,8 @@
 <body>
 <!--head-->
 <nav>
-    <a href="m-index.html">
-        <div class="icon-home icon-home-appearance icon-active" >
+    <a href="m-news.html">
+        <div class="icon-angle-left icon-home-appearance icon-active" >
         </div>
     </a>
     <h3 class=" head-title-appearance">国馆新闻</h3>
@@ -29,11 +29,27 @@
 </nav>
 
 <!--content-->
-<div role="main" class="main">
-</div>
-
 <div class="content">
+    <div class="news-detail">
+        <div class="data">
+            2014-08-09
+        </div>
+        <div class="title">
+            国馆酒亮相国际名酒展，成外商眼中“香饽
+        </div>
+        <div class="news-content">
+            <p>
+                5月22日，“第12届interwine中国（广州）国际名酒展”在广州琶洲会展馆盛大开幕，国馆首款收藏
+                5月22日，“第12届interwine中国（广州）国际名酒展”在广州琶洲会展馆盛大开幕，国馆首款收藏
+                5月22日，“第12届interwine中国（广州）国际名酒展”在广州琶洲会展馆盛大开幕，国馆首款收藏
+            </p>
+            <img src="newsImage/11_01.jpg" alt=""/>
+            <div class="img-detail">
+                一个美丽的人
+            </div>
+        </div>
 
+    </div>
 </div>
 
 </body>
