产品详情页

--- a/weixinsite/m-index.html
+++ b/weixinsite/m-index.html
@@ -37,11 +37,11 @@
     <div class="swiper-main">
         <div class="swiper-container swiper1">
             <div class="swiper-wrapper">
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/index_focus_img_01.jpg') center top no-repeat;">
                 </div>
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/index_focus_img_01.jpg') center top no-repeat;">
                 </div>
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/index_focus_img_01.jpg') center top no-repeat;">
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
     <div class="left" style="height: 24rem">
         <div class="swiper-container swiper-dynamic">
             <div class="swiper-wrapper">
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat; ">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/index_05.jpg ') center top no-repeat; ">
                     <div class="bg-gradients-top" style="height: 24rem">
                         <div class="product-slide">
                             <div class="title">
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat; ">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/index_05.jpg ') center top no-repeat; ">
                     <div class="bg-gradients-top" style="height: 24rem">
                         <div class="product-slide">
                             <div class="title">
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat; ">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/index_05.jpg ') center top no-repeat; ">
                     <div class="bg-gradients-top" style="height: 24rem">
                         <div class="product-slide">
                             <div class="title">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/index_05.jpg') center top no-repeat;">
                     <div class="bg-gradients-top" style="height: 24rem">
                         <div class="product-slide">
                             <div class="title">
@@ -135,7 +135,7 @@
         </div>
     </div>
     <div class="right" style="height: 24rem">
-        <div class="right-one backgroundsise-cover" style="background: url('image/11_01.jpg ') center top no-repeat;">
+        <div class="right-one backgroundsise-cover" style="background: url('image/index_03.jpg') center top no-repeat;">
             <div class="bg-gradients-bottom" style="height: 12rem">
                 <div class="content-model">
                     <div class="title">
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </div>
-        <div class="right-two backgroundsise-cover" style="background: url('image/11_02.jpg ') center top no-repeat; ">
+        <div class="right-two backgroundsise-cover" style="background: url('image/index_02.jpg') center top no-repeat; ">
             <div class="bg-gradients-bottom" style="height: 12rem">
                 <div class="content-model">
                     <div class="title">
@@ -157,7 +157,7 @@
     <div style="clear: both"></div>
 </div>
 <div class="left-and-right">
-    <div class="left backgroundsise-cover" style="background: url('image/11_03.jpg ') center top no-repeat; ">
+    <div class="left backgroundsise-cover" style="background: url('image/index_04.jpg') center top no-repeat; ">
         <div class="bg-gradients-bottom" style="height: 12rem">
             <div class="content-model">
                 <div class="title">
@@ -166,7 +166,7 @@
             </div>
         </div>
     </div>
-    <div class="right backgroundsise-cover" style="background: url('image/11_04.jpg ') center top no-repeat;">
+    <div class="right backgroundsise-cover" style="background: url('image/index_01.jpg') center top no-repeat;">
         <div class="bg-gradients-bottom" style="height: 12rem">
             <div class="content-model">
                 <div class="title">
