--- a/weixinsite/m-news.html
+++ b/weixinsite/m-news.html
@@ -33,7 +33,7 @@
     <div class="swiper-main">
         <div class="swiper-container swiper1">
             <div class="swiper-wrapper">
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('newsImage/720x480.jpg') center top no-repeat;">
                     <div class="bg-gradients-bottom" style="height: 25rem">
                         <div class="news-banner">
                             <div class="title">
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('newsImage/720x480.jpg') center top no-repeat;">
                     <div class="bg-gradients-bottom" style="height: 25rem">
                         <div class="news-banner">
                             <div class="title">
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('newsImage/720x480.jpg') center top no-repeat;">
                     <div class="bg-gradients-bottom" style="height: 25rem">
                         <div class="news-banner">
                             <div class="title">
@@ -76,11 +76,11 @@
 </div>
 
 <div class="content">
-    <ul class="news-lists">
+    <ul class="news-lists clearfix">
         <li>
            <div class="news-block">
                <a href="m-news-detail.html">
-                   <img src="image/11_01.jpg" alt=""/>
+                   <img src="newsImage/11_01.jpg" alt=""/>
                </a>
                <div class="title">
                    国馆酒亮相国际名酒展，成外商眼中“香饽
@@ -101,7 +101,7 @@
         </li>
         <li>
             <div class="news-block">
-                <img src="image/11_02.jpg" alt=""/>
+                <img src="newsImage/11_02.jpg" alt=""/>
                 <div class="title">
                     国馆酒亮相国际名酒展，成外商眼中“香饽
                 </div>
@@ -121,27 +121,7 @@
         </li>
         <li>
             <div class="news-block">
-                <img src="image/11_03.jpg" alt=""/>
-                <div class="title">
-                    国馆酒亮相国际名酒展，成外商眼中“香饽
-                </div>
-                <div class="detail">
-                    5月22日，“第12届interwine中国（广州）国际名酒展”在广州琶洲会展馆盛大开幕，国馆首款收藏
-                </div>
-                <div class="label">
-                   <span class="data">
-                       2014-08-09
-                   </span>
-                   <span class="company">
-                       国馆
-                   </span>
-                    <div style="clear: both"></div>
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="news-block">
-                <img src="image/11_04.jpg" alt=""/>
+                <img src="newsImage/11_04.jpg" alt=""/>
                 <div class="title">
                     国馆酒亮相国际名酒展，成外商眼中“香饽
                 </div>
