一大波页面正在靠近

--- a/weixinsite/m-news-detail.html
+++ b/weixinsite/m-news-detail.html
@@ -47,6 +47,11 @@
             <div class="img-detail">
                 一个美丽的人
             </div>
+            <p>
+                5月22日，“第12届interwine中国（广州）国际名酒展”在广州琶洲会展馆盛大开幕，国馆首款收藏
+                5月22日，“第12届interwine中国（广州）国际名酒展”在广州琶洲会展馆盛大开幕，国馆首款收藏
+                5月22日，“第12届interwine中国（广州）国际名酒展”在广州琶洲会展馆盛大开幕，国馆首款收藏
+            </p>
         </div>
 
     </div>
