--- a/weixinsite/m-news.html
+++ b/weixinsite/m-news.html
@@ -79,9 +79,9 @@
     <ul class="news-lists clearfix">
         <li>
            <div class="news-block">
-               <a href="m-news-detail.html">
-                   <img src="newsImage/11_01.jpg" alt=""/>
-               </a>
+               <div class="news-list-img" style="background: url('newsImage/11_01.jpg') no-repeat center top">
+                   <a href="#" style="display: block; height: 100%"></a>
+               </div>
                <div class="title">
                    国馆酒亮相国际名酒展，成外商眼中“香饽
                </div>
@@ -101,7 +101,9 @@
         </li>
         <li>
             <div class="news-block">
-                <img src="newsImage/11_02.jpg" alt=""/>
+                <div class="news-list-img" style="background: url('newsImage/11_02.jpg') no-repeat center top">
+                    <a href="#" style="display: block; height: 100%"></a>
+                </div>
                 <div class="title">
                     国馆酒亮相国际名酒展，成外商眼中“香饽
                 </div>
@@ -121,7 +123,9 @@
         </li>
         <li>
             <div class="news-block">
-                <img src="newsImage/11_04.jpg" alt=""/>
+                <div class="news-list-img" style="background: url('newsImage/11_04.jpg') no-repeat center top">
+                    <a href="#" style="display: block; height: 100%"></a>
+                </div>
                 <div class="title">
                     国馆酒亮相国际名酒展，成外商眼中“香饽
                 </div>
